--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boggle",
-  "homepage": "cezannelane.com",
+  "homepage": "https://cezannelane.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
