huge progess. Seems to work

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boggle",
-  "homepage": "https://cezannelane.com/",
+  "homepage": "https://cezannelane.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
